--- a/src/hs/fcpx-hacks/plist/10-3/new/NSProCommands.plist
+++ b/src/hs/fcpx-hacks/plist/10-3/new/NSProCommands.plist
@@ -2,6 +2,76 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>FCPXHackGeneratorsOne</key>
+	<dict>
+		<key>downRepeats</key>
+		<integer>0</integer>
+		<key>downSelector</key>
+		<string>FCPXHackGeneratorsOne:</string>
+	</dict>
+	<key>FCPXHackGeneratorsTwo</key>
+	<dict>
+		<key>downRepeats</key>
+		<integer>0</integer>
+		<key>downSelector</key>
+		<string>FCPXHackGeneratorsTwo:</string>
+	</dict>
+	<key>FCPXHackGeneratorsThree</key>
+	<dict>
+		<key>downRepeats</key>
+		<integer>0</integer>
+		<key>downSelector</key>
+		<string>FCPXHackGeneratorsThree:</string>
+	</dict>
+	<key>FCPXHackGeneratorsFour</key>
+	<dict>
+		<key>downRepeats</key>
+		<integer>0</integer>
+		<key>downSelector</key>
+		<string>FCPXHackGeneratorsFour:</string>
+	</dict>
+	<key>FCPXHackGeneratorsFive</key>
+	<dict>
+		<key>downRepeats</key>
+		<integer>0</integer>
+		<key>downSelector</key>
+		<string>FCPXHackGeneratorsFive:</string>
+	</dict>
+	<key>FCPXHackTitlesOne</key>
+	<dict>
+		<key>downRepeats</key>
+		<integer>0</integer>
+		<key>downSelector</key>
+		<string>FCPXHackTitlesOne:</string>
+	</dict>
+	<key>FCPXHackTitlesTwo</key>
+	<dict>
+		<key>downRepeats</key>
+		<integer>0</integer>
+		<key>downSelector</key>
+		<string>FCPXHackTitlesTwo:</string>
+	</dict>
+	<key>FCPXHackTitlesThree</key>
+	<dict>
+		<key>downRepeats</key>
+		<integer>0</integer>
+		<key>downSelector</key>
+		<string>FCPXHackTitlesThree:</string>
+	</dict>
+	<key>FCPXHackTitlesFour</key>
+	<dict>
+		<key>downRepeats</key>
+		<integer>0</integer>
+		<key>downSelector</key>
+		<string>FCPXHackTitlesFour:</string>
+	</dict>
+	<key>FCPXHackTitlesFive</key>
+	<dict>
+		<key>downRepeats</key>
+		<integer>0</integer>
+		<key>downSelector</key>
+		<string>FCPXHackTitlesFive:</string>
+	</dict>
 	<key>FCPXHackTransitionsOne</key>
 	<dict>
 		<key>downRepeats</key>
