--- a/src/hs/fcpx/NSProCommands.plist
+++ b/src/hs/fcpx/NSProCommands.plist
@@ -2,6 +2,98 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>FCPXHackColorPuckOne</key>
+	<dict>
+		<key>downRepeats</key>
+		<integer>0</integer>
+		<key>downSelector</key>
+		<string>FCPXHackColorPuckOne:</string>
+	</dict>
+	<key>FCPXHackColorPuckTwo</key>
+	<dict>
+		<key>downRepeats</key>
+		<integer>0</integer>
+		<key>downSelector</key>
+		<string>FCPXHackColorPuckTwo:</string>
+	</dict>
+
+	<key>FCPXHackColorPuckThree</key>
+	<dict>
+		<key>downRepeats</key>
+		<integer>0</integer>
+		<key>downSelector</key>
+		<string>FCPXHackColorPuckThree:</string>
+	</dict>
+	<key>FCPXHackColorPuckFour</key>
+	<dict>
+		<key>downRepeats</key>
+		<integer>0</integer>
+		<key>downSelector</key>
+		<string>FCPXHackColorPuckFour:</string>
+	</dict>
+	<key>FCPXHackSaturationPuckOne</key>
+	<dict>
+		<key>downRepeats</key>
+		<integer>0</integer>
+		<key>downSelector</key>
+		<string>FCPXHackSaturationPuckOne:</string>
+	</dict>
+	<key>FCPXHackSaturationPuckTwo</key>
+	<dict>
+		<key>downRepeats</key>
+		<integer>0</integer>
+		<key>downSelector</key>
+		<string>FCPXHackSaturationPuckTwo:</string>
+	</dict>
+	<key>FCPXHackSaturationPuckThree</key>
+	<dict>
+		<key>downRepeats</key>
+		<integer>0</integer>
+		<key>downSelector</key>
+		<string>FCPXHackSaturationPuckThree:</string>
+	</dict>
+	<key>FCPXHackSaturationPuckFour</key>
+	<dict>
+		<key>downRepeats</key>
+		<integer>0</integer>
+		<key>downSelector</key>
+		<string>FCPXHackSaturationPuckFour:</string>
+	</dict>
+	<key>FCPXHackExposurePuckOne</key>
+	<dict>
+		<key>downRepeats</key>
+		<integer>0</integer>
+		<key>downSelector</key>
+		<string>FCPXHackExposurePuckOne:</string>
+	</dict>
+	<key>FCPXHackExposurePuckTwo</key>
+	<dict>
+		<key>downRepeats</key>
+		<integer>0</integer>
+		<key>downSelector</key>
+		<string>FCPXHackExposurePuckTwo:</string>
+	</dict>
+	<key>FCPXHackExposurePuckThree</key>
+	<dict>
+		<key>downRepeats</key>
+		<integer>0</integer>
+		<key>downSelector</key>
+		<string>FCPXHackExposurePuckThree:</string>
+	</dict>
+	<key>FCPXHackExposurePuckFour</key>
+	<dict>
+		<key>downRepeats</key>
+		<integer>0</integer>
+		<key>downSelector</key>
+		<string>FCPXHackExposurePuckFour:</string>
+	</dict>
+	<key>FCPXHackColorPuckOneUp</key>
+	<dict>
+		<key>downRepeats</key>
+		<integer>0</integer>
+		<key>downSelector</key>
+		<string>FCPXHackColorPuckOneUp:</string>
+	</dict>
 	<key>FCPXHackScrollingTimeline</key>
 	<dict>
 		<key>downRepeats</key>
