--- a/src/hs/fcpx/NSProCommands.plist
+++ b/src/hs/fcpx/NSProCommands.plist
@@ -2,6 +2,230 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>FCPXHackColorPuckOneUp</key>
+	<dict>
+		<key>downRepeats</key>
+		<integer>0</integer>
+		<key>downSelector</key>
+		<string>FCPXHackColorPuckOneUp:</string>
+	</dict>
+	<key>FCPXHackColorPuckTwoUp</key>
+	<dict>
+		<key>downRepeats</key>
+		<integer>0</integer>
+		<key>downSelector</key>
+		<string>FCPXHackColorPuckTwoUp:</string>
+	</dict>
+	<key>FCPXHackColorPuckThreeUp</key>
+	<dict>
+		<key>downRepeats</key>
+		<integer>0</integer>
+		<key>downSelector</key>
+		<string>FCPXHackColorPuckThreeUp:</string>
+	</dict>
+	<key>FCPXHackColorPuckFourUp</key>
+	<dict>
+		<key>downRepeats</key>
+		<integer>0</integer>
+		<key>downSelector</key>
+		<string>FCPXHackColorPuckFourUp:</string>
+	</dict>
+	<key>FCPXHackColorPuckOneDown</key>
+	<dict>
+		<key>downRepeats</key>
+		<integer>0</integer>
+		<key>downSelector</key>
+		<string>FCPXHackColorPuckOneDown:</string>
+	</dict>
+	<key>FCPXHackColorPuckTwoDown</key>
+	<dict>
+		<key>downRepeats</key>
+		<integer>0</integer>
+		<key>downSelector</key>
+		<string>FCPXHackColorPuckTwoDown:</string>
+	</dict>
+	<key>FCPXHackColorPuckThreeDown</key>
+	<dict>
+		<key>downRepeats</key>
+		<integer>0</integer>
+		<key>downSelector</key>
+		<string>FCPXHackColorPuckThreeDown:</string>
+	</dict>
+	<key>FCPXHackColorPuckFourDown</key>
+	<dict>
+		<key>downRepeats</key>
+		<integer>0</integer>
+		<key>downSelector</key>
+		<string>FCPXHackColorPuckFourDown:</string>
+	</dict>
+	<key>FCPXHackColorPuckOneLeft</key>
+	<dict>
+		<key>downRepeats</key>
+		<integer>0</integer>
+		<key>downSelector</key>
+		<string>FCPXHackColorPuckOneLeft:</string>
+	</dict>
+	<key>FCPXHackColorPuckTwoLeft</key>
+	<dict>
+		<key>downRepeats</key>
+		<integer>0</integer>
+		<key>downSelector</key>
+		<string>FCPXHackColorPuckTwoLeft:</string>
+	</dict>
+	<key>FCPXHackColorPuckThreeLeft</key>
+	<dict>
+		<key>downRepeats</key>
+		<integer>0</integer>
+		<key>downSelector</key>
+		<string>FCPXHackColorPuckThreeLeft:</string>
+	</dict>
+	<key>FCPXHackColorPuckFourLeft</key>
+	<dict>
+		<key>downRepeats</key>
+		<integer>0</integer>
+		<key>downSelector</key>
+		<string>FCPXHackColorPuckFourLeft:</string>
+	</dict>
+	<key>FCPXHackColorPuckOneRight</key>
+	<dict>
+		<key>downRepeats</key>
+		<integer>0</integer>
+		<key>downSelector</key>
+		<string>FCPXHackColorPuckOneRight:</string>
+	</dict>
+	<key>FCPXHackColorPuckTwoRight</key>
+	<dict>
+		<key>downRepeats</key>
+		<integer>0</integer>
+		<key>downSelector</key>
+		<string>FCPXHackColorPuckTwoRight:</string>
+	</dict>
+	<key>FCPXHackColorPuckThreeRight</key>
+	<dict>
+		<key>downRepeats</key>
+		<integer>0</integer>
+		<key>downSelector</key>
+		<string>FCPXHackColorPuckThreeRight:</string>
+	</dict>
+	<key>FCPXHackColorPuckFourRight</key>
+	<dict>
+		<key>downRepeats</key>
+		<integer>0</integer>
+		<key>downSelector</key>
+		<string>FCPXHackColorPuckFourRight:</string>
+	</dict>
+	<key>FCPXHackSaturationPuckOneUp</key>
+	<dict>
+		<key>downRepeats</key>
+		<integer>0</integer>
+		<key>downSelector</key>
+		<string>FCPXHackSaturationPuckOneUp:</string>
+	</dict>
+	<key>FCPXHackSaturationPuckTwoUp</key>
+	<dict>
+		<key>downRepeats</key>
+		<integer>0</integer>
+		<key>downSelector</key>
+		<string>FCPXHackSaturationPuckTwoUp:</string>
+	</dict>
+	<key>FCPXHackSaturationPuckThreeUp</key>
+	<dict>
+		<key>downRepeats</key>
+		<integer>0</integer>
+		<key>downSelector</key>
+		<string>FCPXHackSaturationPuckThreeUp:</string>
+	</dict>
+	<key>FCPXHackSaturationPuckFourUp</key>
+	<dict>
+		<key>downRepeats</key>
+		<integer>0</integer>
+		<key>downSelector</key>
+		<string>FCPXHackSaturationPuckFourUp:</string>
+	</dict>
+	<key>FCPXHackSaturationPuckOneDown</key>
+	<dict>
+		<key>downRepeats</key>
+		<integer>0</integer>
+		<key>downSelector</key>
+		<string>FCPXHackSaturationPuckOneDown:</string>
+	</dict>
+	<key>FCPXHackSaturationPuckTwoDown</key>
+	<dict>
+		<key>downRepeats</key>
+		<integer>0</integer>
+		<key>downSelector</key>
+		<string>FCPXHackSaturationPuckTwoDown:</string>
+	</dict>
+	<key>FCPXHackSaturationPuckThreeDown</key>
+	<dict>
+		<key>downRepeats</key>
+		<integer>0</integer>
+		<key>downSelector</key>
+		<string>FCPXHackSaturationPuckThreeDown:</string>
+	</dict>
+	<key>FCPXHackSaturationPuckFourDown</key>
+	<dict>
+		<key>downRepeats</key>
+		<integer>0</integer>
+		<key>downSelector</key>
+		<string>FCPXHackSaturationPuckFourDown:</string>
+	</dict>
+	<key>FCPXHackExposurePuckOneUp</key>
+	<dict>
+		<key>downRepeats</key>
+		<integer>0</integer>
+		<key>downSelector</key>
+		<string>FCPXHackExposurePuckOneUp:</string>
+	</dict>
+	<key>FCPXHackExposurePuckTwoUp</key>
+	<dict>
+		<key>downRepeats</key>
+		<integer>0</integer>
+		<key>downSelector</key>
+		<string>FCPXHackExposurePuckTwoUp:</string>
+	</dict>
+	<key>FCPXHackExposurePuckThreeUp</key>
+	<dict>
+		<key>downRepeats</key>
+		<integer>0</integer>
+		<key>downSelector</key>
+		<string>FCPXHackExposurePuckThreeUp:</string>
+	</dict>
+	<key>FCPXHackExposurePuckFourUp</key>
+	<dict>
+		<key>downRepeats</key>
+		<integer>0</integer>
+		<key>downSelector</key>
+		<string>FCPXHackExposurePuckFourUp:</string>
+	</dict>
+	<key>FCPXHackExposurePuckOneDown</key>
+	<dict>
+		<key>downRepeats</key>
+		<integer>0</integer>
+		<key>downSelector</key>
+		<string>FCPXHackExposurePuckOneDown:</string>
+	</dict>
+	<key>FCPXHackExposurePuckTwoDown</key>
+	<dict>
+		<key>downRepeats</key>
+		<integer>0</integer>
+		<key>downSelector</key>
+		<string>FCPXHackExposurePuckTwoDown:</string>
+	</dict>
+	<key>FCPXHackExposurePuckThreeDown</key>
+	<dict>
+		<key>downRepeats</key>
+		<integer>0</integer>
+		<key>downSelector</key>
+		<string>FCPXHackExposurePuckThreeDown:</string>
+	</dict>
+	<key>FCPXHackExposurePuckFourDown</key>
+	<dict>
+		<key>downRepeats</key>
+		<integer>0</integer>
+		<key>downSelector</key>
+		<string>FCPXHackExposurePuckFourDown:</string>
+	</dict>
 	<key>FCPXHackColorPuckOne</key>
 	<dict>
 		<key>downRepeats</key>
