--- a/src/hs/fcpx/new/NSProCommands.plist
+++ b/src/hs/fcpx/new/NSProCommands.plist
@@ -2,6 +2,20 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>FCPXHackChangeTimelineClipHeightUp</key>
+	<dict>
+		<key>downRepeats</key>
+		<integer>0</integer>
+		<key>downSelector</key>
+		<string>FCPXHackChangeTimelineClipHeightUp:</string>
+	</dict>
+	<key>FCPXHackChangeTimelineClipHeightDown</key>
+	<dict>
+		<key>downRepeats</key>
+		<integer>0</integer>
+		<key>downSelector</key>
+		<string>FCPXHackChangeTimelineClipHeightDown:</string>
+	</dict>
 	<key>FCPXHackColorPuckOneUp</key>
 	<dict>
 		<key>downRepeats</key>
