--- a/src/hs/fcpx/new/NSProCommands.plist
+++ b/src/hs/fcpx/new/NSProCommands.plist
@@ -2,6 +2,76 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>FCPXHackCreateOptimizedMediaOn</key>
+	<dict>
+		<key>downRepeats</key>
+		<integer>0</integer>
+		<key>downSelector</key>
+		<string>FCPXHackCreateOptimizedMediaOn:</string>
+	</dict>
+	<key>FCPXHackCreateOptimizedMediaOff</key>
+	<dict>
+		<key>downRepeats</key>
+		<integer>0</integer>
+		<key>downSelector</key>
+		<string>FCPXHackCreateOptimizedMediaOff:</string>
+	</dict>
+	<key>FCPXHackCreateMulticamOptimizedMediaOn</key>
+	<dict>
+		<key>downRepeats</key>
+		<integer>0</integer>
+		<key>downSelector</key>
+		<string>FCPXHackCreateMulticamOptimizedMediaOn:</string>
+	</dict>
+	<key>FCPXHackCreateMulticamOptimizedMediaOff</key>
+	<dict>
+		<key>downRepeats</key>
+		<integer>0</integer>
+		<key>downSelector</key>
+		<string>FCPXHackCreateMulticamOptimizedMediaOff:</string>
+	</dict>
+	<key>FCPXHackCreateProxyMediaOn</key>
+	<dict>
+		<key>downRepeats</key>
+		<integer>0</integer>
+		<key>downSelector</key>
+		<string>FCPXHackCreateProxyMediaOn:</string>
+	</dict>
+	<key>FCPXHackCreateProxyMediaOff</key>
+	<dict>
+		<key>downRepeats</key>
+		<integer>0</integer>
+		<key>downSelector</key>
+		<string>FCPXHackCreateProxyMediaOff:</string>
+	</dict>
+	<key>FCPXHackLeaveInPlaceOn</key>
+	<dict>
+		<key>downRepeats</key>
+		<integer>0</integer>
+		<key>downSelector</key>
+		<string>FCPXHackLeaveInPlaceOn:</string>
+	</dict>
+	<key>FCPXHackLeaveInPlaceOff</key>
+	<dict>
+		<key>downRepeats</key>
+		<integer>0</integer>
+		<key>downSelector</key>
+		<string>FCPXHackLeaveInPlaceOff:</string>
+	</dict>
+	<key>FCPXHackBackgroundRenderOn</key>
+	<dict>
+		<key>downRepeats</key>
+		<integer>0</integer>
+		<key>downSelector</key>
+		<string>FCPXHackBackgroundRenderOn:</string>
+	</dict>
+	<key>FCPXHackBackgroundRenderOff</key>
+	<dict>
+		<key>downRepeats</key>
+		<integer>0</integer>
+		<key>downSelector</key>
+		<string>FCPXHackBackgroundRenderOff:</string>
+	</dict>
 	<key>FCPXHackChangeTimelineClipHeightUp</key>
 	<dict>
 		<key>downRepeats</key>
