--- a/src/hs/fcpx/new/NSProCommands.plist
+++ b/src/hs/fcpx/new/NSProCommands.plist
@@ -2,6 +2,342 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>FCPXHackCutSwitchAngle01Video</key>
+	<dict>
+		<key>downRepeats</key>
+		<integer>0</integer>
+		<key>downSelector</key>
+		<string>FCPXHackCutSwitchAngle01Video:</string>
+	</dict>
+	<key>FCPXHackCutSwitchAngle02Video</key>
+	<dict>
+		<key>downRepeats</key>
+		<integer>0</integer>
+		<key>downSelector</key>
+		<string>FCPXHackCutSwitchAngle02Video:</string>
+	</dict>
+	<key>FCPXHackCutSwitchAngle03Video</key>
+	<dict>
+		<key>downRepeats</key>
+		<integer>0</integer>
+		<key>downSelector</key>
+		<string>FCPXHackCutSwitchAngle03Video:</string>
+	</dict>
+	<key>FCPXHackCutSwitchAngle04Video</key>
+	<dict>
+		<key>downRepeats</key>
+		<integer>0</integer>
+		<key>downSelector</key>
+		<string>FCPXHackCutSwitchAngle04Video:</string>
+	</dict>
+	<key>FCPXHackCutSwitchAngle05Video</key>
+	<dict>
+		<key>downRepeats</key>
+		<integer>0</integer>
+		<key>downSelector</key>
+		<string>FCPXHackCutSwitchAngle05Video:</string>
+	</dict>
+	<key>FCPXHackCutSwitchAngle06Video</key>
+	<dict>
+		<key>downRepeats</key>
+		<integer>0</integer>
+		<key>downSelector</key>
+		<string>FCPXHackCutSwitchAngle06Video:</string>
+	</dict>
+	<key>FCPXHackCutSwitchAngle07Video</key>
+	<dict>
+		<key>downRepeats</key>
+		<integer>0</integer>
+		<key>downSelector</key>
+		<string>FCPXHackCutSwitchAngle07Video:</string>
+	</dict>
+	<key>FCPXHackCutSwitchAngle08Video</key>
+	<dict>
+		<key>downRepeats</key>
+		<integer>0</integer>
+		<key>downSelector</key>
+		<string>FCPXHackCutSwitchAngle08Video:</string>
+	</dict>
+	<key>FCPXHackCutSwitchAngle09Video</key>
+	<dict>
+		<key>downRepeats</key>
+		<integer>0</integer>
+		<key>downSelector</key>
+		<string>FCPXHackCutSwitchAngle09Video:</string>
+	</dict>
+	<key>FCPXHackCutSwitchAngle10Video</key>
+	<dict>
+		<key>downRepeats</key>
+		<integer>0</integer>
+		<key>downSelector</key>
+		<string>FCPXHackCutSwitchAngle10Video:</string>
+	</dict>
+	<key>FCPXHackCutSwitchAngle11Video</key>
+	<dict>
+		<key>downRepeats</key>
+		<integer>0</integer>
+		<key>downSelector</key>
+		<string>FCPXHackCutSwitchAngle11Video:</string>
+	</dict>
+	<key>FCPXHackCutSwitchAngle12Video</key>
+	<dict>
+		<key>downRepeats</key>
+		<integer>0</integer>
+		<key>downSelector</key>
+		<string>FCPXHackCutSwitchAngle12Video:</string>
+	</dict>
+	<key>FCPXHackCutSwitchAngle13Video</key>
+	<dict>
+		<key>downRepeats</key>
+		<integer>0</integer>
+		<key>downSelector</key>
+		<string>FCPXHackCutSwitchAngle13Video:</string>
+	</dict>
+	<key>FCPXHackCutSwitchAngle14Video</key>
+	<dict>
+		<key>downRepeats</key>
+		<integer>0</integer>
+		<key>downSelector</key>
+		<string>FCPXHackCutSwitchAngle14Video:</string>
+	</dict>
+	<key>FCPXHackCutSwitchAngle15Video</key>
+	<dict>
+		<key>downRepeats</key>
+		<integer>0</integer>
+		<key>downSelector</key>
+		<string>FCPXHackCutSwitchAngle15Video:</string>
+	</dict>
+	<key>FCPXHackCutSwitchAngle16Video</key>
+	<dict>
+		<key>downRepeats</key>
+		<integer>0</integer>
+		<key>downSelector</key>
+		<string>FCPXHackCutSwitchAngle16Video:</string>
+	</dict>
+	<key>FCPXHackCutSwitchAngle01Audio</key>
+	<dict>
+		<key>downRepeats</key>
+		<integer>0</integer>
+		<key>downSelector</key>
+		<string>FCPXHackCutSwitchAngle01Audio:</string>
+	</dict>
+	<key>FCPXHackCutSwitchAngle02Audio</key>
+	<dict>
+		<key>downRepeats</key>
+		<integer>0</integer>
+		<key>downSelector</key>
+		<string>FCPXHackCutSwitchAngle02Audio:</string>
+	</dict>
+	<key>FCPXHackCutSwitchAngle03Audio</key>
+	<dict>
+		<key>downRepeats</key>
+		<integer>0</integer>
+		<key>downSelector</key>
+		<string>FCPXHackCutSwitchAngle03Audio:</string>
+	</dict>
+	<key>FCPXHackCutSwitchAngle04Audio</key>
+	<dict>
+		<key>downRepeats</key>
+		<integer>0</integer>
+		<key>downSelector</key>
+		<string>FCPXHackCutSwitchAngle04Audio:</string>
+	</dict>
+	<key>FCPXHackCutSwitchAngle05Audio</key>
+	<dict>
+		<key>downRepeats</key>
+		<integer>0</integer>
+		<key>downSelector</key>
+		<string>FCPXHackCutSwitchAngle05Audio:</string>
+	</dict>
+	<key>FCPXHackCutSwitchAngle06Audio</key>
+	<dict>
+		<key>downRepeats</key>
+		<integer>0</integer>
+		<key>downSelector</key>
+		<string>FCPXHackCutSwitchAngle06Audio:</string>
+	</dict>
+	<key>FCPXHackCutSwitchAngle07Audio</key>
+	<dict>
+		<key>downRepeats</key>
+		<integer>0</integer>
+		<key>downSelector</key>
+		<string>FCPXHackCutSwitchAngle07Audio:</string>
+	</dict>
+	<key>FCPXHackCutSwitchAngle08Audio</key>
+	<dict>
+		<key>downRepeats</key>
+		<integer>0</integer>
+		<key>downSelector</key>
+		<string>FCPXHackCutSwitchAngle08Audio:</string>
+	</dict>
+	<key>FCPXHackCutSwitchAngle09Audio</key>
+	<dict>
+		<key>downRepeats</key>
+		<integer>0</integer>
+		<key>downSelector</key>
+		<string>FCPXHackCutSwitchAngle09Audio:</string>
+	</dict>
+	<key>FCPXHackCutSwitchAngle10Audio</key>
+	<dict>
+		<key>downRepeats</key>
+		<integer>0</integer>
+		<key>downSelector</key>
+		<string>FCPXHackCutSwitchAngle10Audio:</string>
+	</dict>
+	<key>FCPXHackCutSwitchAngle11Audio</key>
+	<dict>
+		<key>downRepeats</key>
+		<integer>0</integer>
+		<key>downSelector</key>
+		<string>FCPXHackCutSwitchAngle11Audio:</string>
+	</dict>
+	<key>FCPXHackCutSwitchAngle12Audio</key>
+	<dict>
+		<key>downRepeats</key>
+		<integer>0</integer>
+		<key>downSelector</key>
+		<string>FCPXHackCutSwitchAngle12Audio:</string>
+	</dict>
+	<key>FCPXHackCutSwitchAngle13Audio</key>
+	<dict>
+		<key>downRepeats</key>
+		<integer>0</integer>
+		<key>downSelector</key>
+		<string>FCPXHackCutSwitchAngle13Audio:</string>
+	</dict>
+	<key>FCPXHackCutSwitchAngle14Audio</key>
+	<dict>
+		<key>downRepeats</key>
+		<integer>0</integer>
+		<key>downSelector</key>
+		<string>FCPXHackCutSwitchAngle14Audio:</string>
+	</dict>
+	<key>FCPXHackCutSwitchAngle15Audio</key>
+	<dict>
+		<key>downRepeats</key>
+		<integer>0</integer>
+		<key>downSelector</key>
+		<string>FCPXHackCutSwitchAngle15Audio:</string>
+	</dict>
+	<key>FCPXHackCutSwitchAngle16Audio</key>
+	<dict>
+		<key>downRepeats</key>
+		<integer>0</integer>
+		<key>downSelector</key>
+		<string>FCPXHackCutSwitchAngle16Audio:</string>
+	</dict>
+	<key>FCPXHackCutSwitchAngle01Both</key>
+	<dict>
+		<key>downRepeats</key>
+		<integer>0</integer>
+		<key>downSelector</key>
+		<string>FCPXHackCutSwitchAngle01Both:</string>
+	</dict>
+	<key>FCPXHackCutSwitchAngle02Both</key>
+	<dict>
+		<key>downRepeats</key>
+		<integer>0</integer>
+		<key>downSelector</key>
+		<string>FCPXHackCutSwitchAngle02Both:</string>
+	</dict>
+	<key>FCPXHackCutSwitchAngle03Both</key>
+	<dict>
+		<key>downRepeats</key>
+		<integer>0</integer>
+		<key>downSelector</key>
+		<string>FCPXHackCutSwitchAngle03Both:</string>
+	</dict>
+	<key>FCPXHackCutSwitchAngle04Both</key>
+	<dict>
+		<key>downRepeats</key>
+		<integer>0</integer>
+		<key>downSelector</key>
+		<string>FCPXHackCutSwitchAngle04Both:</string>
+	</dict>
+	<key>FCPXHackCutSwitchAngle05Both</key>
+	<dict>
+		<key>downRepeats</key>
+		<integer>0</integer>
+		<key>downSelector</key>
+		<string>FCPXHackCutSwitchAngle05Both:</string>
+	</dict>
+	<key>FCPXHackCutSwitchAngle06Both</key>
+	<dict>
+		<key>downRepeats</key>
+		<integer>0</integer>
+		<key>downSelector</key>
+		<string>FCPXHackCutSwitchAngle06Both:</string>
+	</dict>
+	<key>FCPXHackCutSwitchAngle07Both</key>
+	<dict>
+		<key>downRepeats</key>
+		<integer>0</integer>
+		<key>downSelector</key>
+		<string>FCPXHackCutSwitchAngle07Both:</string>
+	</dict>
+	<key>FCPXHackCutSwitchAngle08Both</key>
+	<dict>
+		<key>downRepeats</key>
+		<integer>0</integer>
+		<key>downSelector</key>
+		<string>FCPXHackCutSwitchAngle08Both:</string>
+	</dict>
+	<key>FCPXHackCutSwitchAngle09Both</key>
+	<dict>
+		<key>downRepeats</key>
+		<integer>0</integer>
+		<key>downSelector</key>
+		<string>FCPXHackCutSwitchAngle09Both:</string>
+	</dict>
+	<key>FCPXHackCutSwitchAngle10Both</key>
+	<dict>
+		<key>downRepeats</key>
+		<integer>0</integer>
+		<key>downSelector</key>
+		<string>FCPXHackCutSwitchAngle10Both:</string>
+	</dict>
+	<key>FCPXHackCutSwitchAngle11Both</key>
+	<dict>
+		<key>downRepeats</key>
+		<integer>0</integer>
+		<key>downSelector</key>
+		<string>FCPXHackCutSwitchAngle11Both:</string>
+	</dict>
+	<key>FCPXHackCutSwitchAngle12Both</key>
+	<dict>
+		<key>downRepeats</key>
+		<integer>0</integer>
+		<key>downSelector</key>
+		<string>FCPXHackCutSwitchAngle12Both:</string>
+	</dict>
+	<key>FCPXHackCutSwitchAngle13Both</key>
+	<dict>
+		<key>downRepeats</key>
+		<integer>0</integer>
+		<key>downSelector</key>
+		<string>FCPXHackCutSwitchAngle13Both:</string>
+	</dict>
+	<key>FCPXHackCutSwitchAngle14Both</key>
+	<dict>
+		<key>downRepeats</key>
+		<integer>0</integer>
+		<key>downSelector</key>
+		<string>FCPXHackCutSwitchAngle14Both:</string>
+	</dict>
+	<key>FCPXHackCutSwitchAngle15Both</key>
+	<dict>
+		<key>downRepeats</key>
+		<integer>0</integer>
+		<key>downSelector</key>
+		<string>FCPXHackCutSwitchAngle15Both:</string>
+	</dict>
+	<key>FCPXHackCutSwitchAngle16Both</key>
+	<dict>
+		<key>downRepeats</key>
+		<integer>0</integer>
+		<key>downSelector</key>
+		<string>FCPXHackCutSwitchAngle16Both:</string>
+	</dict>
 	<key>FCPXHackMoveToPlayhead</key>
 	<dict>
 		<key>downRepeats</key>
