--- a/src/hs/plist/10-3/new/NSProCommandGroups.plist
+++ b/src/hs/plist/10-3/new/NSProCommandGroups.plist
@@ -2,6 +2,184 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>Hacks</key>
+	<dict>
+		<key>color index</key>
+		<integer>2</integer>
+		<key>commands</key>
+		<array>
+			<string>FCPXHackToggleTouchBar</string>
+			<string>FCPXHackConsole</string>
+			<string>FCPXHackCutSwitchAngle01Video</string>
+			<string>FCPXHackCutSwitchAngle02Video</string>
+			<string>FCPXHackCutSwitchAngle03Video</string>
+			<string>FCPXHackCutSwitchAngle04Video</string>
+			<string>FCPXHackCutSwitchAngle05Video</string>
+			<string>FCPXHackCutSwitchAngle06Video</string>
+			<string>FCPXHackCutSwitchAngle07Video</string>
+			<string>FCPXHackCutSwitchAngle08Video</string>
+			<string>FCPXHackCutSwitchAngle09Video</string>
+			<string>FCPXHackCutSwitchAngle10Video</string>
+			<string>FCPXHackCutSwitchAngle11Video</string>
+			<string>FCPXHackCutSwitchAngle12Video</string>
+			<string>FCPXHackCutSwitchAngle13Video</string>
+			<string>FCPXHackCutSwitchAngle14Video</string>
+			<string>FCPXHackCutSwitchAngle15Video</string>
+			<string>FCPXHackCutSwitchAngle16Video</string>
+			<string>FCPXHackCutSwitchAngle01Audio</string>
+			<string>FCPXHackCutSwitchAngle02Audio</string>
+			<string>FCPXHackCutSwitchAngle03Audio</string>
+			<string>FCPXHackCutSwitchAngle04Audio</string>
+			<string>FCPXHackCutSwitchAngle05Audio</string>
+			<string>FCPXHackCutSwitchAngle06Audio</string>
+			<string>FCPXHackCutSwitchAngle07Audio</string>
+			<string>FCPXHackCutSwitchAngle08Audio</string>
+			<string>FCPXHackCutSwitchAngle09Audio</string>
+			<string>FCPXHackCutSwitchAngle10Audio</string>
+			<string>FCPXHackCutSwitchAngle11Audio</string>
+			<string>FCPXHackCutSwitchAngle12Audio</string>
+			<string>FCPXHackCutSwitchAngle13Audio</string>
+			<string>FCPXHackCutSwitchAngle14Audio</string>
+			<string>FCPXHackCutSwitchAngle15Audio</string>
+			<string>FCPXHackCutSwitchAngle16Audio</string>
+			<string>FCPXHackCutSwitchAngle01Both</string>
+			<string>FCPXHackCutSwitchAngle02Both</string>
+			<string>FCPXHackCutSwitchAngle03Both</string>
+			<string>FCPXHackCutSwitchAngle04Both</string>
+			<string>FCPXHackCutSwitchAngle05Both</string>
+			<string>FCPXHackCutSwitchAngle06Both</string>
+			<string>FCPXHackCutSwitchAngle07Both</string>
+			<string>FCPXHackCutSwitchAngle08Both</string>
+			<string>FCPXHackCutSwitchAngle09Both</string>
+			<string>FCPXHackCutSwitchAngle10Both</string>
+			<string>FCPXHackCutSwitchAngle11Both</string>
+			<string>FCPXHackCutSwitchAngle12Both</string>
+			<string>FCPXHackCutSwitchAngle13Both</string>
+			<string>FCPXHackCutSwitchAngle14Both</string>
+			<string>FCPXHackCutSwitchAngle15Both</string>
+			<string>FCPXHackCutSwitchAngle16Both</string>
+			<string>FCPXHackMoveToPlayhead</string>
+			<string>FCPXHackColorPuckOneMouse</string>
+			<string>FCPXHackColorPuckTwoMouse</string>
+			<string>FCPXHackColorPuckThreeMouse</string>
+			<string>FCPXHackColorPuckFourMouse</string>
+			<string>FCPXHackSaturationPuckOneMouse</string>
+			<string>FCPXHackSaturationPuckTwoMouse</string>
+			<string>FCPXHackSaturationPuckThreeMouse</string>
+			<string>FCPXHackSaturationPuckFourMouse</string>
+			<string>FCPXHackExposurePuckOneMouse</string>
+			<string>FCPXHackExposurePuckTwoMouse</string>
+			<string>FCPXHackExposurePuckThreeMouse</string>
+			<string>FCPXHackExposurePuckFourMouse</string>
+			<string>FCPXHackSelectClipAtLaneOne</string>
+			<string>FCPXHackSelectClipAtLaneTwo</string>
+			<string>FCPXHackSelectClipAtLaneThree</string>
+			<string>FCPXHackSelectClipAtLaneFour</string>
+			<string>FCPXHackSelectClipAtLaneFive</string>
+			<string>FCPXHackSelectClipAtLaneSix</string>
+			<string>FCPXHackSelectClipAtLaneSeven</string>
+			<string>FCPXHackSelectClipAtLaneEight</string>
+			<string>FCPXHackSelectClipAtLaneNine</string>
+			<string>FCPXHackSelectClipAtLaneTen</string>
+			<string>FCPXHackChangeSmartCollectionsLabel</string>
+			<string>FCPXHackCreateOptimizedMediaOn</string>
+			<string>FCPXHackCreateOptimizedMediaOff</string>
+			<string>FCPXHackCreateMulticamOptimizedMediaOn</string>
+			<string>FCPXHackCreateMulticamOptimizedMediaOff</string>
+			<string>FCPXHackCreateProxyMediaOn</string>
+			<string>FCPXHackCreateProxyMediaOff</string>
+			<string>FCPXHackLeaveInPlaceOn</string>
+			<string>FCPXHackLeaveInPlaceOff</string>
+			<string>FCPXHackBackgroundRenderOn</string>
+			<string>FCPXHackBackgroundRenderOff</string>
+			<string>FCPXHackChangeTimelineClipHeightUp</string>
+			<string>FCPXHackChangeTimelineClipHeightDown</string>
+			<string>FCPXHackColorPuckOne</string>
+			<string>FCPXHackColorPuckTwo</string>
+			<string>FCPXHackColorPuckThree</string>
+			<string>FCPXHackColorPuckFour</string>
+			<string>FCPXHackSaturationPuckOne</string>
+			<string>FCPXHackSaturationPuckTwo</string>
+			<string>FCPXHackSaturationPuckThree</string>
+			<string>FCPXHackSaturationPuckFour</string>
+			<string>FCPXHackExposurePuckOne</string>
+			<string>FCPXHackExposurePuckTwo</string>
+			<string>FCPXHackExposurePuckThree</string>
+			<string>FCPXHackExposurePuckFour</string>
+			<string>FCPXHackColorPuckOneUp</string>
+			<string>FCPXHackColorPuckTwoUp</string>
+			<string>FCPXHackColorPuckThreeUp</string>
+			<string>FCPXHackColorPuckFourUp</string>
+			<string>FCPXHackColorPuckOneDown</string>
+			<string>FCPXHackColorPuckTwoDown</string>
+			<string>FCPXHackColorPuckThreeDown</string>
+			<string>FCPXHackColorPuckFourDown</string>
+			<string>FCPXHackColorPuckOneLeft</string>
+			<string>FCPXHackColorPuckTwoLeft</string>
+			<string>FCPXHackColorPuckThreeLeft</string>
+			<string>FCPXHackColorPuckFourLeft</string>
+			<string>FCPXHackColorPuckOneRight</string>
+			<string>FCPXHackColorPuckTwoRight</string>
+			<string>FCPXHackColorPuckThreeRight</string>
+			<string>FCPXHackColorPuckFourRight</string>
+			<string>FCPXHackSaturationPuckOneUp</string>
+			<string>FCPXHackSaturationPuckTwoUp</string>
+			<string>FCPXHackSaturationPuckThreeUp</string>
+			<string>FCPXHackSaturationPuckFourUp</string>
+			<string>FCPXHackSaturationPuckOneDown</string>
+			<string>FCPXHackSaturationPuckTwoDown</string>
+			<string>FCPXHackSaturationPuckThreeDown</string>
+			<string>FCPXHackSaturationPuckFourDown</string>
+			<string>FCPXHackExposurePuckOneUp</string>
+			<string>FCPXHackExposurePuckTwoUp</string>
+			<string>FCPXHackExposurePuckThreeUp</string>
+			<string>FCPXHackExposurePuckFourUp</string>
+			<string>FCPXHackExposurePuckOneDown</string>
+			<string>FCPXHackExposurePuckTwoDown</string>
+			<string>FCPXHackExposurePuckThreeDown</string>
+			<string>FCPXHackExposurePuckFourDown</string>
+			<string>FCPXHackScrollingTimeline</string>
+			<string>FCPXHackEffectsOne</string>
+			<string>FCPXHackEffectsTwo</string>
+			<string>FCPXHackEffectsThree</string>
+			<string>FCPXHackEffectsFour</string>
+			<string>FCPXHackEffectsFive</string>
+			<string>FCPXHackLaunchFinalCutPro</string>
+			<string>FCPXHackShowListOfShortcutKeys</string>
+			<string>FCPXHackHighlightBrowserPlayhead</string>
+			<string>FCPXHackRevealInBrowserAndHighlight</string>
+			<string>FCPXHackSingleMatchFrameAndHighlight</string>
+			<string>FCPXHackRevealMulticamClipInBrowserAndHighlight</string>
+			<string>FCPXHackRevealMulticamClipInAngleEditorAndHighlight</string>
+			<string>FCPXHackBatchExportFromBrowser</string>
+			<string>FCPXHackChangeBackupInterval</string>
+			<string>FCPXHackToggleTimecodeOverlays</string>
+			<string>FCPXHackToggleMovingMarkers</string>
+			<string>FCPXHackAllowTasksDuringPlayback</string>
+			<string>FCPXHackSelectColorBoardPuckOne</string>
+			<string>FCPXHackSelectColorBoardPuckTwo</string>
+			<string>FCPXHackSelectColorBoardPuckThree</string>
+			<string>FCPXHackSelectColorBoardPuckFour</string>
+			<string>FCPXHackRestoreKeywordPresetOne</string>
+			<string>FCPXHackRestoreKeywordPresetTwo</string>
+			<string>FCPXHackRestoreKeywordPresetThree</string>
+			<string>FCPXHackRestoreKeywordPresetFour</string>
+			<string>FCPXHackRestoreKeywordPresetFive</string>
+			<string>FCPXHackRestoreKeywordPresetSix</string>
+			<string>FCPXHackRestoreKeywordPresetSeven</string>
+			<string>FCPXHackRestoreKeywordPresetEight</string>
+			<string>FCPXHackRestoreKeywordPresetNine</string>
+			<string>FCPXHackSaveKeywordPresetOne</string>
+			<string>FCPXHackSaveKeywordPresetTwo</string>
+			<string>FCPXHackSaveKeywordPresetThree</string>
+			<string>FCPXHackSaveKeywordPresetFour</string>
+			<string>FCPXHackSaveKeywordPresetFive</string>
+			<string>FCPXHackSaveKeywordPresetSix</string>
+			<string>FCPXHackSaveKeywordPresetSeven</string>
+			<string>FCPXHackSaveKeywordPresetEight</string>
+			<string>FCPXHackSaveKeywordPresetNine</string>
+		</array>
+	</dict>
 	<key>Application</key>
 	<dict>
 		<key>color index</key>
