--- a/src/hs/fcpxhacks/plist/10-3/new/NSProCommandGroups.plist
+++ b/src/hs/fcpxhacks/plist/10-3/new/NSProCommandGroups.plist
@@ -8,6 +8,7 @@
 		<integer>2</integer>
 		<key>commands</key>
 		<array>
+			<string>FCPXHackHUD</string>
 			<string>FCPXHackTitlesOne</string>
 			<string>FCPXHackTitlesTwo</string>
 			<string>FCPXHackTitlesThree</string>
